default/objects/E2E_Error_message__c/E2E_Error_message__c.object-meta.xml
<CustomObject>
    <description>Info about Error message related to opportunity</description>
    <label>E2E Error message</label>
    <nameField>
        <displayFormat>Error-{0000}</displayFormat>
        <label>E2E Error message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E2E Error messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>