default/objects/E2E_Error_message__c/fields/CausedBy__c.field-meta.xml
<CustomField>
    <fullName>CausedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CausedBy</label>
    <referenceTo>E2E_Error_message__c</referenceTo>
    <relationshipLabel>E2E Error messages</relationshipLabel>
    <relationshipName>E2E_Error_messages</relationshipName>
    <type>Lookup</type>
</CustomField>