default/objects/E2E_Error_message__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>LineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>