default/objects/E2E_Error_message__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>E2E Error messages</relationshipLabel>
    <relationshipName>Error_messages</relationshipName>
    <type>Lookup</type>
</CustomField>