default/objects/E2E_Error_message__c/fields/StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>StackTraceString__c</fullName>
    <label>StackTraceString</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>