default/objects/E2E_Error_message__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>TypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>